fix: remove gloss effect on safari <select> elements
using lucide down chevron for this

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -40,6 +40,24 @@
   }
 }
 
+html select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22black%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%3E%3Cpath%20d=%22M6%209%2012%2015%2018%209%22/%3E%3C/svg%3E') no-repeat;
+  background-size: 18px;
+  background-position: calc(100% - 3px) 50%;
+  background-repeat: no-repeat;
+  background-color: var(--input-background);
+  padding-right: 24px;
+}
+
+@media (prefers-color-scheme: dark) {
+  html select {
+    background-image: url('data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22white%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%3E%3Cpath%20d=%22M6%209%2012%2015%2018%209%22/%3E%3C/svg%3E') !important;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -205,6 +223,7 @@ p.description {
   gap: 4px;
   align-items: center;
 }
+
 .icons {
   display: flex;
   gap: 4px;
@@ -255,13 +274,15 @@ h6>input[type="text"] {
 
 input[type="color"] {
   border: none;
-    outline: none;
-    background: none;
-    /* color: transparent; */
-    padding: 0 !important;
-    appearance: none;
-    width: 50px;
+  outline: none;
+  background: none;
+  /* color: transparent; */
+  padding: 0 !important;
+  appearance: none;
+  width: 50px;
 }
+
+
 
 input[type="text"],
 input[type="color"],
@@ -447,7 +468,7 @@ article {
 .timeline-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem; 
+  gap: 1rem;
   padding-left: 30px;
   position: relative;
 }
@@ -481,7 +502,7 @@ article {
 .timeline-item {
   position: relative;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   gap: 0.25rem;
 }
 
